--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,6 @@
 \begin{multicols}{3}
     \include{general}
     \include{zahlenUndVektoren}
-    \include{reihenUndFolgen}
+    \include{folgenUndReihen}
 \end{multicols}
 \end{document}
