--- a/main.tex
+++ b/main.tex
@@ -76,5 +76,7 @@
     \include{general}
     \include{zahlenUndVektoren}
     \include{folgenUndReihen}
+    \include{stetigeFunktionen}
+    \todo{Bisektionsverfahren}
 \end{multicols}
 \end{document}
