NEW: Finish Stetige Funktionen Section

--- a/main.tex
+++ b/main.tex
@@ -17,9 +17,12 @@
 \newcommand\Q{\ensuremath{\mathbb{Q}}}
 \newcommand\C{\ensuremath{\mathbb{C}}}
 \renewcommand\O{\ensuremath{\emptyset}}
+\newcommand{\notimplies}{\;\not\!\!\!\implies}
 
 \usepackage{enumitem}
 \usepackage{paralist}
+\setdefaultitem{$\textcolor{red}\bullet$}{\textcolor{red}\textendash}{$\textcolor{red}\textasteriskcentered$}{$\textcolor{red}\textperiodcentered$}
+
 \usepackage{xcolor}
 \newcommand{\todo}[1]{\textcolor{red}{TODO: #1}\PackageWarning{TODO:}{#1!}}
 \usepackage{parskip}
