NEW: Differenzierbare Funktionen Sektion

--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,9 @@
 \newcommand\C{\ensuremath{\mathbb{C}}}
 \renewcommand\O{\ensuremath{\emptyset}}
 \newcommand{\notimplies}{\;\not\!\!\!\implies}
+\DeclareMathOperator\arcsinh{arcsinh}
+\DeclareMathOperator\arccosh{arccosh}
+\DeclareMathOperator\arctanh{arctanh}
 
 \usepackage{enumitem}
 \usepackage{paralist}
@@ -80,6 +83,8 @@
     \include{zahlenUndVektoren}
     \include{folgenUndReihen}
     \include{stetigeFunktionen}
+    \include{differenzierbareFunktionen}
     \todo{Bisektionsverfahren}
+    \todo{lim x-> 1 sin(x)/x = 1}
 \end{multicols}
 \end{document}
