--- a/stetigeFunktionen.tex
+++ b/stetigeFunktionen.tex
@@ -153,6 +153,7 @@ Für $x > 0, a \in \R \ x^a := \exp(a \ln(x))$
         \begin{compactitem}
             \item $f_n : \mathbb{D} \to \R$ ist gleichmässig konvergent $\iff \forall \epsilon > 0 \ \exists N \ge 1: \ \forall n,m \ge N \ \forall x \in D: \left| f_n(x) - f_m(x) \right| < \epsilon$.
             \item Falls $f_n:\mathbb{D} \to \R$ gleichmässig konvergente Folge stetiger Funktionen $\implies f(x) := \lim_{n \to \infty} f_n(x)$ stetig.
+            \item Alle $f_n$ stetig und $f_n \to f \implies f$ ist stetig.
         \end{compactitem}
 \end{compactdesc}
 
