--- a/main.tex
+++ b/main.tex
@@ -84,6 +84,7 @@
     \include{folgenUndReihen}
     \include{stetigeFunktionen}
     \include{differenzierbareFunktionen}
+    \include{riemannIntegral}
     \todo{Bisektionsverfahren}
     \todo{lim x-> 1 sin(x)/x = 1}
 \end{multicols}
